--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 /* home********************** */
 #home-img{
     height: 100dvh;
-    background-image: linear-gradient(to bottom, rgba(4,55,67,.8),rgba(4,55,67,.8)), url('/images/img2-new.jpg');
+    background-image: linear-gradient(to bottom, rgba(4,55,67,.8),rgba(4,55,67,.8)), url('images/img2-new.jpg');
        /* background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) , rgba(0,0,0,0.5)), url('/images/img2-new.jpg'); */
     background-position: center;
     background-repeat: no-repeat;
