--- a/style.css
+++ b/style.css
@@ -34,3 +34,129 @@
 
 
 }
+/* portfolio button  */
+.portfolio_link:hover,
+.portfolio_link:focus
+
+{
+    background-color: orange;
+}
+
+/* about section. *********************** */
+#about-bg{
+    width: 100%;
+    height:max-content;
+    background-image: linear-gradient(to bottom, rgba(4,55,67,.8),rgba(4,55,67,.8)), url('images/about.jpg');
+       /* background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) , rgba(0,0,0,0.5)), url('/images/img2-new.jpg'); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/* @media screen and (max-width: 320px){
+    #about-parent{
+    width: 100%;
+    height: 100dvh;
+    color: rgb(240, 255, 242);
+    display: block;
+}
+    #peter-image{
+    width: 50%;
+    height: 50%;
+    border-radius: 10%;
+    color: aliceblue;
+}
+.about-content{
+    width: 100%;
+    background-color: rgb(255, 149, 0);
+    color: #150303;
+}
+
+} */
+
+.text-color{
+    color: rgb(68, 158, 38);
+}
+/* about page  */
+#about-parent {
+  /* Default styles for all screen sizes */
+  height: 100dvh;
+}
+
+#about-left, #about-right {
+  /* Default styles for all screen sizes */
+  height: 100%;
+}
+ #peter-image {
+    margin:5% ;
+    width: 90%;
+    border-radius: 10px;
+  }
+
+
+@media screen and (min-width: 768px) {
+  /* Styles for medium and large devices (laptop, desktop) */
+  #about-parent {
+    display: flex;
+  }
+
+  #about-left, #about-right {
+    width: 50%;
+  }
+   #about-right {
+   color: #fff;
+  }
+  #about-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+  #peter-image {
+  border-radius: 50%;
+  width: 50%;
+  margin: 20%;
+}
+/* project images  */
+.my-projects-img{
+    width: 70%;
+    height: 50%;
+    background-color: red;
+}
+}
+
+span.carousel-control-prev-icon{
+    color: orange;
+}
+
+@media screen and (max-width: 767px) {
+  /* Styles for small devices (mobile) */
+  #about-parent {
+    display: block;
+    width: 100%;
+  }
+  #about-left, #about-right {
+    width: 100%;
+  }
+   #about-right {
+    width: 100%;
+    height:max-content;
+    background-image: linear-gradient(to bottom, rgba(4,55,67,.8),rgba(4,55,67,.8)), url('images/img2.jpg');
+       /* background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) , rgba(0,0,0,0.5)), url('/images/img2-new.jpg'); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+  }
+  
+  #peter-image{
+    height: 40%;
+  }
+  #about-me{
+    height: 40%;
+  
+   
+  }
+
+
+}
+
